--- a/src/assets/CommonStyle.css
+++ b/src/assets/CommonStyle.css
@@ -116,3 +116,98 @@
 .offcanvas-header .btn-close {
   margin-top: 0px !important;
 }
+
+.buttonClass {
+  background-color: #8b8b8b50;
+  color: #000;
+  font-weight: 500;
+  overflow: hidden;
+  box-shadow: none;
+  transition: background-color 0.3s;
+}
+
+.buttonClass:hover {
+  color: white;
+  border: none !important;
+  background-color: transparent;
+}
+
+.buttonClass::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  transition: opacity 0.3s, border 0.3s;
+}
+
+.buttonClass:hover::before {
+  opacity: 0;
+}
+
+.buttonClass::after {
+  content: "";
+  position: absolute;
+  top: 50;
+  left: 0;
+  width: 200px;
+  height: 200px;
+  background-color: #d10505;
+  border-color: transparent;
+  border-radius: 50%;
+  transform: translate(-10px, -70px) scale(0.1);
+  opacity: 0;
+  z-index: -1;
+  transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
+}
+
+.buttonClass:hover::after {
+  opacity: 1;
+  transform-origin: 100px 100px;
+  transform: scale(1) translate(-10px, -70px);
+}
+
+/* .buttonClass {
+  --clr-font-main: hsla(0 0% 20% / 100);
+  --btn-bg-1: hsla(194 100% 90% / 1);
+  --btn-bg-2: rgb(255, 31, 31);
+  --btn-bg-color: hsla(360 100% 100% / 1);
+  --radii: 0.5em;
+  cursor: pointer;
+  transition: 0.8s;
+  background-size: 280% auto;
+  background-image: linear-gradient(
+    325deg,
+    var(--btn-bg-2) 50%,
+    var(--btn-bg-1) 55%,
+    var(--btn-bg-2) 90%
+  );
+  border: none;
+  border-radius: var(--radii);
+  color: var(--btn-bg-color);
+  box-shadow:
+    0px 0px 20px rgba(71, 184, 255, 0.5),
+    0px 5px 5px -1px rgba(58, 125, 233, 0.25),
+    inset 4px 4px 8px rgba(175, 230, 255, 0.5),
+    inset -4px -4px 8px rgba(19, 95, 216, 0.35);
+}
+
+.buttonClass:hover {
+  background-position: right top;
+}
+
+.buttonClass:is(:focus, :focus-visible, :active) {
+  outline: none;
+  box-shadow:
+    0 0 0 3px var(--btn-bg-color),
+    0 0 0 6px var(--btn-bg-2);
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .buttonClass {
+    transition: linear;
+  }
+} */
+
